fix broken css in order review page, reduce input fields in order page

--- a/css/default/front/edit-css.css
+++ b/css/default/front/edit-css.css
@@ -444,6 +444,7 @@ label {
 }
 .payment-total .txt_right{
 	text-align: left;
+	padding: 6px;
 }
 ul.payment-option{
 	margin-bottom: 10px;
